[project]
name = "plantiza"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.118.0",
    "firebase>=4.0.1",
    "firebase-admin>=7.1.0",
    "openai-agents>=0.3.3",
    "pydantic>=2.11.10",
    "uvicorn>=0.37.0",
]
